test/src/e2e_vm_tests/test_programs/should_pass/language/u8_bitwise_not/src/main.sw
script;

use core::num::*;
use std::assert::assert;

fn main() -> bool {
    let a: u8 = 2u8;

    assert(a.binary_not() == 253u8);

    true
}
